assets/stylesheets/stylesheet.css
/* global default settings */
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html, body {
  margin: 0;
  padding: 0;
}

/* body */

/* Responsive */
@media (min-width: 768px) {
  body {
    /* center align */
    margin: 5px auto 5px auto;
    width: 90%;
  }
}
@media (min-width: 1024px) {
  body {
    /* center align */
    margin: 5px auto 5px auto;
    width: 60%;
  }
}

body {
  padding: 10px;
  
  /* font */
  /* font-family: Monaco, monospace; */
  font-size: 16px;

  /* line height */
  /* line-height: 1.5; */

  /* background */
  background-image: url('/assets/images/background.jpg');
  background-color: #FFFFFF; /* white background to compatible with background image. */
  /* background: rgba(255, 255, 255, 0.6) none repeat scroll 0% 0%; */  /* semi-transparent */
  background-position: bottom right;
  background-origin: content-box;
  background-size: auto auto;
  background-repeat: no-repeat;
  background-attachment: fixed, scroll;
}

/* text effect */
body {
  color: #444;
  text-shadow: 1px 1px 3px rgba(50, 50, 50, .15);
}
p {
  text-shadow: none;
}

/* content */
#content {
  width: 90%;
  margin: 20px 20px 0px 20px;
  display: block;
  background-color: rgba(255,255,255,0.6);
  border-radius: 4px;
  padding: 5px 15px 20px 15px;
}

.container {
  margin: 0 auto;
  max-width: 770px;
}

/* headlines */

/* colorful headline levels */
h2::before {
  content: "1. ";
  border-left: 4px solid #FF657C;
  padding-left: 10px;
}
h3::before {
  content: "2. ";
  border-left: 4px solid #93FF72;
  padding-left: 10px;
  margin-left: 20px;
}
h4::before {
  content: "3. ";
  border-left: 4px solid #FDFF70;
  padding-left: 10px;
  margin-left: 40px;
}
h5::before {
  content: "4. ";
  border-left: 4px solid #81E8FF;
  padding-left: 10px;
  margin-left: 60px;
}
h6::before {
  content: "5. ";
  border-left: 4px solid #F290FF;
  padding-left: 10px;
  margin-left: 80px;
}

/* headline size */
h2, h3, h4, h5, h6 {
  font-weight: 100;
  line-height: 1.2;
  margin-bottom: .3em;
  margin-top: .8em;
}
/* first level */
h2 {
  font-size: 30px;
  font-family: 'Lobster', Helvetica, cursive;
}
h3 {
  font-size: 20px;
  font-family: unset;
}
h4 {
  font-size: 20px;
  font-family: unset;
  font-style: oblique;
}
h5, h6 {
  font-size: 15px;
  font-family: unset;
}

/* avatar */
img#avatar {
  float: left;
  display: inline-block;
  width: 200px;
  margin-right: 20px;
}

/* drawers: properties, logbook, */
/* example block */
pre.example {
  display: block;
  color: #7b7b7b;
  border-color: #ccc;
  font-size: 10px;
  padding: 5px 5px 5px 5px;
  margin: 0 0 10px 20px;
  border-radius: unset;
  box-shadow: none;
  text-shadow: unset;
}

/* MathJax */
div.MathJax_Display {
  text-align: center;
  position: relative;
  width: 100%;
  font-size: 170%;
}
div.MathJax_Display::before {
  content: "| ";
  display: inline;
  position: relative;
  float: left;
  padding-right: 10px;
  color: red;
}

/* preamble */
#preamble {
  color: #888;
}
#preamble:after {
  display: block;
  margin: 10px 0;
  color: #ccc;
}
#preamble a {
  color: #333;
}

/* navigator */
.nav {
  /* background: rgba(255,255,255,0.9) !important; */
  opacity: 1;
  transition: opacity 0.3s ease-out 0s, transform 0.3s ease-out 0s;
  transform: translateY(0px);
  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
  border-radius: 4px;
  display: flex;
  align-items: stretch;
  position: relative;
  z-index: 30;
  padding: 20px 20px 0px 20px;
}
.nav ul {
  list-style: none;
}
.nav li {
  /* horizontal one line navigator */
  display: inline-flex;
  /* larger font */
  font-size: 150%;
  /* separator navigators with larger space */
  margin-left: 10px;
  padding-left: 10px;
  padding-right: 10px;
}
/* don't show underline for navigator links */
.nav li a {
  text-decoration: none;
}

/* org-info.js */
/* HOME/UP */
#org-div-home-and-up {
  float: left;
  text-align: left;
  position: relative;
  /* hide */
  display: none;
}
/* org-info.js navigation */
.org-info-js_info-navigation {
  /* hide */
  /* display: none; */
}
/* infojs search box */
#org-info-js_console-container {
  /* NOTE: remove it, useless */
  display: none;
  float: right;
  text-align: right;
  right: 20%;
  position: relative;
  width: 10%;
  border: 0px solid rgb(204, 204, 204);
}
#org-info-js_console {
  display: none;
}
#org-info-js_console-icon {
  content: "> "
}
#org-info-js_console-label {
  content: url("/assets/images/search.png") no-repeat 5px 6px;
}
#org-info-js_console-input {
  border-radius: 2px;
  border: 1px solid #ddd;
}
#org-info-js_console-input:focus {
  background-color: gray;
  width: 20%;
}

/* bold, italic, inline code */
i, em, b, strong {
  padding-left: .1em;
  padding-right: .1em;
}
b, strong {
  font-weight: bold;
  color: #333;
}
b:before, b:after, strong:before, strong:after {
  content: "*";
}
i:before, i:after, em:before, em:after {
  content: "/";
}

/* horizontal line */
hr {
  margin: 0;
  border: 0;
}
hr:after {
  display: block;
  margin: 10px 0;
  content: "----------------------------------------------------------------";
  color: #ccc;
}

/* list */
ul, ol {
  padding: 0;
  margin: 0 0 20px;
}

/* link */
a {
  text-decoration: underline;
  color: black;
}
a:hover {
  color: #ff6347;
}
a:visited {
  color: gray;
}

/* image */
img {
  display: block;
  margin: 0;
  vertical-align: middle;
  border-radius: 13px;
  border: 3px solid white;
  box-shadow: 12px 10px 1px -3px whitesmoke;
  width: auto;
}

/* inline image */
figure > img {
  display: block;
  width: 100%;
}

/* kbd */
kbd {
  font-weight: bold;
  
  color: #333333;
  background: rgba(255, 255, 255, 0.6) none repeat scroll 0% 0%;

  border: 0.5px solid #444444;
  border-radius: 3px;
  box-shadow: 5px 5px 5px rgba(169, 170, 164, 0.9);
  
  /* padding: 2px 8px 1px; */
  /* margin: 0px 2px; */
  display: inline-block;
  
  white-space: nowrap;
}
/* ... */

